# gaussify

./: CLAUDE.md  README.md  pyproject.toml
src/gaussify/: __init__.py  cli.py  downloader.py  gpu.py  install.py  pipeline.py  runner.py  toolpaths.py
src/gaussify/tools/: brush.py  colmap.py  densify.py  ffmpeg.py  glomap.py
tests/: test_downloader.py  test_gpu.py  test_pipeline.py
